# ng_monitor1

./: .gitignore  CMakeLists.txt  INSTALL.md  README.md  changelog.md  mkpkg.py
.github/workflows/: cmake.yml
cmake/: utils.cmake
include/cpp_starter/: version.hpp
include/cpp_starter/game/: ChessGame.hpp
include/ng_monitor/: Client.hpp  NgInterface.hpp  Server.hpp  version.hpp
instances/: ng-monitor.cpp  ng_client.cpp  ng_server.cpp
src/game/: ChessGame.cpp  Server.cpp
test/chessgame/: mock_ChessGame.cpp  test_ChessGame.cpp
test/ng-monitor/: mock_ng_monitor.cpp  test_ng_monitor.cpp
